--- a/app/styles/base/typography.scss
+++ b/app/styles/base/typography.scss
@@ -10,13 +10,13 @@ h4,
 h5,
 h6 {
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
 }
 
 .org-caption {
   text-transform: uppercase;
-  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 500;
   color: ksi-color('primary-dark');
 }
