--- a/app/styles/base/html.scss
+++ b/app/styles/base/html.scss
@@ -1,4 +1,5 @@
-html {
-    width: 100%;
-    height: 100%;
+html,body {
+  width: 100%;
+  height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
 }
