--- a/app/styles/layout/navbar-main.scss
+++ b/app/styles/layout/navbar-main.scss
@@ -1,127 +1,54 @@
-
-.navbar-btn{
-     margin-left:10px;
-}
-.navbar-default {
-    background-color: ksi-color('primary-dark');
-    border-color: ksi-color('primary-dark');
-    border-bottom: $border-h-width solid ksi-color('primary-orange');
-}
-.navbar-default .navbar-brand {
-    color: ksi-color('text-light');
-}
-.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-    color: ksi-color('primary-orange');
-}
-.navbar-default .navbar-text {
-    color: ksi-color('text-light');
-}
-.navbar-default .navbar-nav > li > a {
-    color: ksi-color('text-light');
-}
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-    color: ksi-color('primary-orange');
-}
-.navbar-default .navbar-nav > li > .dropdown-menu {
-    background-color: ksi-color('primary-dark');
-}
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a {
-    color: ksi-color('primary-orange');
-}
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
-    color: ksi-color('primary-orange');
-    background-color: ksi-color('primary-dark');
-}
-.navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
-    background-color: ksi-color('primary-dark');
-}
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-    color: ksi-color('primary-orange');
-    background-color: ksi-color('primary-dark');
-}
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-    color: ksi-color('primary-orange');
-    background-color: ksi-color('primary-dark');
-}
-.navbar-default .navbar-toggle {
-    border-color: ksi-color('primary-dark');
-}
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-    background-color: ksi-color('primary-dark');
-}
-.navbar-default .navbar-toggle .icon-bar {
-    background-color: ksi-color('text-light');
-}
-.navbar-default .navbar-collapse,
-.navbar-default .navbar-form {
-    border-color: ksi-color('text-light');
-}
-.navbar-default .navbar-link {
-    color: ksi-color('text-light');
-}
-.navbar-default .navbar-link:hover {
-    color: ksi-color('primary-orange');
+.navbar-trans {
+  background-color: ksi-color('primary-dark');
+  color: ksi-color('text-light');
+  border-color: ksi-color('primary-orange');
+  border-bottom: 3px;
 }
 
-.navbar-brand,
-.navbar-nav li a {
-    line-height: 70px;
-    height: 70px;
-    padding-top: 0;
+.navbar-trans .navbar-brand, .navbar-trans >.container-fluid .navbar-brand {
+  padding: 14px;
+  margin-right: 20px;
+  color: ksi-color('primary-orange');
 }
 
-@media (max-width: 767px) {
-    .navbar-brand {
-        padding: 0;
-        margin-top: 5px;
-    }
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-        color: ksi-color('text-light');
-    }
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-        color: ksi-color('primary-orange');
-    }
-    .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-        color: ksi-color('primary-orange');
-        background-color: ksi-color('primary-dark');
-    }
+.navbar-brand >a {
+  color: ksi-color('primary-orange');
 }
 
-@media (max-width: 1000px) {
-    .navbar-header {
-        float: none;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 3px ksi-color('primary-orange');
-        box-shadow: inset 0 3px 0 ksi-color('primary-orange');
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-        margin: 7.5px -15px;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .navbar-text {
-        float: none;
-        margin: 15px 0;
-    }
-    /* since 3.1.0 */
-    .navbar-collapse.collapse.in {
-        display: block!important;
-    }
-    .collapsing {
-        overflow: hidden!important;
-    }
+.navbar-trans li>a:focus,.navbar-trans li.active {
+	background-color: ksi-color('primary-orange');
+	color:ksi-color('text-light');
+}
+
+.navbar-trans li>a:hover {
+	background-color: ksi-color('secondary-orange');
+	color: ksi-color('text-light');
+}
+
+.navbar-trans a{
+  color:ksi-color('text-light');
+  letter-spacing:1px;
+}
+
+.navbar-toggle {
+  border-color: ksi-color('text-light');
+}
+
+.icon-bar {
+  background-color: ksi-color('text-light');
+}
+
+.dropdown-menu {
+  background-color: ksi-color('primary-dark');
+}
+
+.dropdown-menu > li > a {
+  color: ksi-color('text-light');
+}
+
+.dropdown-menu > li > a:hover,
+   .dropdown-menu > li > a:focus {
+    color: ksi-color('text-light');
+    text-decoration: none;
+    background-color:  ksi-color('primary-orange');
 }
