graf setting one image

--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -3,7 +3,7 @@
 	  <div class="col-xs-5 col-md-3">
 
 			<div style="margin-top:30px">
-				<img src="http://placehold.it/250x250"> <!-- user image --> <!-- TODO default img -->
+				<img src="{{model.profile_pic}}" style="max-width:250px;"/> <!-- user image --> <!-- TODO default img -->
 			</div>
 
       <button type="button" class="btn btn-primary" style="margin-top:20px; width:250px;"> <!-- TODO file button -->
