--- a/app/templates/article.hbs
+++ b/app/templates/article.hbs
@@ -1,15 +1,12 @@
 <section id="novinky" class="container content-section" style="text-align:justify">
     <div class="panel panel-article" style="margin-top:30px">
       <div class="panel-heading panel-heading-article">
-        <img src={{model.pic}} style="width: 250px">
+        <img src={{model.picture}} style="width: 250px">
         <h1 id="name">
           {{model.title}}
         </h1>
       </div>
       <div class="panel-body panel-body-article">
-        <div class="row" >
-            {{{model.intro}}}
-        </div>
         <div class="row" style="margin-top: 20px">
             {{{model.body}}}
         </div>
