Rewrite tasks to be backend compatible

--- a/app/templates/components/achievement-small.hbs
+++ b/app/templates/components/achievement-small.hbs
@@ -1,2 +1,2 @@
 <!-- <img src="img/achievement-unknown.png" width="30px;"/> -->
-<img src="{{model.pic}}" width="30px;" alt="{{model.title}}">
+<img src="{{model.picture}}" width="30px;" alt="{{model.title}}">
