--- a/app/templates/task.hbs
+++ b/app/templates/task.hbs
@@ -4,7 +4,7 @@
     </div>
     <!-- TODO: center name and image -->
     <div class="row" style="margin-top: 15px">
-      <img id="org-photo" class="inline" src="{{model.author.profile_pic}}" style="width: 50px">
+      <img id="org-photo" class="inline" src="{{model.author.profile_picture}}" style="width: 50px">
       <h4 id="org-name" class="inline" style="color: #39393a">{{model.author.full_name}}</h4>
     </div>
     <div class="row" style="margin-top: 20px">
@@ -21,9 +21,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         {{#link-to "task.assignment" tagName="li"}}<a href="{{view.href}}">Zadání</a>{{/link-to}}
-                        {{#unless is_quiz}}
-                            {{#link-to "task.submission" tagName="li"}}<a href="{{view.href}}">Odevzdání</a>{{/link-to}}
-                        {{/unless}}
+                        {{#link-to "task.submission" tagName="li"}}<a href="{{view.href}}">Odevzdání</a>{{/link-to}}
                         {{#link-to "task.statistics" tagName="li"}}<a href="{{view.href}}">Statistika</a>{{/link-to}}
                         {{#link-to "task.discussion" tagName="li"}}<a href="{{view.href}}">Diskuze</a>{{/link-to}}
                         {{#link-to "task.solution" tagName="li"}}<a href="{{view.href}}">Řešení</a>{{/link-to}}
