Add hover captions in orgs (index).
However, this new feature is not fully operable -- not working yet. To be done. Used library: HCaptions
    http://ryun.github.io/HCaptions/
    https://github.com/ryun/HCaptions

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -42,36 +42,9 @@
 </section>
 
 <section id="organizatori" class="container content-section">
-    <!-- Sekcia o ksi -->
+    <!-- Sekcia organizatoru -->
     <div class="jumbotron" style="background-color: #fff; ">
         <div style="text-align: center; color: #39393a;"><h1>Organizátoři</h1></div>
-        <div class="row" style="margin-top: 30px">
-            <div class="col-xs-6 col-md-3">
-                <img src="http://placehold.it/150x150" style="width: 100%">
-            </div>
-            <div class="col-xs-6 col-md-3">
-                <img src="http://placehold.it/150x150" style="width: 100%">
-            </div>
-            <div class="col-xs-6 col-md-3">
-                <img src="http://placehold.it/150x150" style="width: 100%">
-            </div>
-            <div class="col-xs-6 col-md-3">
-                <img src="http://placehold.it/150x150" style="width: 100%">
-            </div>
-        </div>
-        <div class="row" style="margin-top: 30px">
-            <div class="col-xs-6 col-md-3">
-                <img src="http://placehold.it/150x150" style="width: 100%">
-            </div>
-            <div class="col-xs-6 col-md-3">
-                <img src="http://placehold.it/150x150" style="width: 100%">
-            </div>
-            <div class="col-xs-6 col-md-3">
-                <img src="http://placehold.it/150x150" style="width: 100%">
-            </div>
-            <div class="col-xs-6 col-md-3">
-                <img src="http://placehold.it/150x150" style="width: 100%">
-            </div>
-        </div>
+        {{orgs-list model=model.organisators}}
     </div>
 </section>
