--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -1,10 +1,6 @@
 <div id="content">
-		{{#if true}}
-		<div class="alert alert-danger" role="alert">
-			<div style="text-align:center">
-		  	<strong>Pozor: </strong> nejsi přihlašen, aby byli tvé operace uloženy musíš se přihlásit.
-			</div>
-		</div>
-		{{/if}}
+		{{#unless session.isAuthenticated}}
+			{{warning-login text="nejsi přihláše, aby byly tvé operace užloženy, musíš se přihlásit."}}
+		{{/unless}}
     {{tasks-graph model=model}}
 </div>
