Make the assignment look better

--- a/app/templates/task/assignment.hbs
+++ b/app/templates/task/assignment.hbs
@@ -1,6 +1,6 @@
 <div style="margin-bottom:30px">
   <div style="margin:20px">
-     {{model.body}}
+     {{{model.body}}}
   </div>
   <div style="margin:20px">
     <a href="/tasks/{{model.id}}/assignment/pdf"><button class="btn btn-primary">Stáhnout pdf</button></a>
